--- a/score_0.2/sports/basketball/index.html
+++ b/score_0.2/sports/basketball/index.html
@@ -33,13 +33,13 @@
         </header>
         <nav>
             <ul class="tabs">
-                <li><a href="/score_0.1/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/main.png" alt="Home"> 주요경기</a></li>
-                <li><a href="/score_0.1/sports/soccer/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/soccer.png" alt="Football"> 축구</a></li>
-                <li><a href="/score_0.1/sports/baseball/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/baseball.png" alt="Baseball"> 야구</a></li>
-                <li><a href="/score_0.1/sports/basketball/index.html" class="tab-link active"><img src="../../assets/images/tabmenu_logo/basketball.png" alt="Basketball"> 농구</a></li>
-                <li><a href="/score_0.1/sports/volleyball/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/volleyball.png" alt="Volleyball"> 배구</a></li>
+                <li><a href="/score_0.2/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/main.png" alt="Home"> 주요경기</a></li>
+                <li><a href="/score_0.2/sports/soccer/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/soccer.png" alt="Football"> 축구</a></li>
+                <li><a href="/score_0.2/sports/baseball/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/baseball.png" alt="Baseball"> 야구</a></li>
+                <li><a href="/score_0.2/sports/basketball/index.html" class="tab-link active"><img src="../../assets/images/tabmenu_logo/basketball.png" alt="Basketball"> 농구</a></li>
+                <li><a href="/score_0.2/sports/volleyball/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/volleyball.png" alt="Volleyball"> 배구</a></li>
                 <!-- <li><a href="/score_0.1/sports/rugby/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/rugby.png" alt="American Football"> 미식축구</a></li> -->
-                <li><a href="/score_0.1/sports/lol/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/lol.png" alt="LOL"> LOL</a></li>
+                <li><a href="/score_0.2/sports/lol/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/lol.png" alt="LOL"> LOL</a></li>
                 <!-- 다른 스포츠 페이지 링크 추가 -->
             </ul>
         </nav>
@@ -52,12 +52,12 @@
                 <button class="nav-btn" id="today-day">오늘</button>
             </div>
                 
-                <div class="filters">
-                    <span>전체(<span id="total-game-cnt">0</span>)</span>
-                    <span>대기중(<span id="ready-game-cnt">0</span>)</span>
-                    <span>진행중(<span id="inprogress-game-cnt">0</span>)</span>
-                    <span>종료(<span id="final-game-cnt">0</span>)</span>
-                </div>
+            <div class="filters">
+                <span id="total-button" class="active">전체(<span id="total-game-cnt">119</span>)</span>
+                <span id="ready-button">대기중(<span id="ready-game-cnt">69</span>)</span>
+                <span id="inprogress-button">진행중(<span id="inprogress-game-cnt">10</span>)</span>
+                <span id="final-button">종료(<span id="final-game-cnt">39</span>)</span>
+            </div>
                 <hr class="divider">
                 <div class="content">
                     <div id="calendar-container">
