named=>chams update

--- a/score_0.2/sports/volleyball/index.html
+++ b/score_0.2/sports/volleyball/index.html
@@ -33,13 +33,13 @@
         </header>
         <nav>
             <ul class="tabs">
-                <li><a href="/score_0.2/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/main.png" alt="Home"> 주요경기</a></li>
-                <li><a href="/score_0.2/sports/soccer/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/soccer.png" alt="Football"> 축구</a></li>
-                <li><a href="/score_0.2/sports/baseball/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/baseball.png" alt="Baseball"> 야구</a></li>
-                <li><a href="/score_0.2/sports/basketball/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/basketball.png" alt="Basketball"> 농구</a></li>
-                <li><a href="/score_0.2/sports/volleyball/index.html" class="tab-link active"><img src="../../assets/images/tabmenu_logo/volleyball.png" alt="Volleyball"> 배구</a></li>
+                <li><a href="../../index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/main.png" alt="Home"> 주요경기</a></li>
+                <li><a href="../soccer/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/soccer.png" alt="Football"> 축구</a></li>
+                <li><a href="../baseball/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/baseball.png" alt="Baseball"> 야구</a></li>
+                <li><a href="../basketball/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/basketball.png" alt="Basketball"> 농구</a></li>
+                <li><a href="./index.html" class="tab-link active"><img src="../../assets/images/tabmenu_logo/volleyball.png" alt="Volleyball"> 배구</a></li>
                 <!-- <li><a href="/score_0.1/sports/rugby/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/rugby.png" alt="American Football"> 미식축구</a></li> -->
-                <li><a href="/score_0.2/sports/lol/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/lol.png" alt="LOL"> LOL</a></li>
+                <li><a href="../lol/index.html" class="tab-link"><img src="../../assets/images/tabmenu_logo/lol.png" alt="LOL"> LOL</a></li>
                 <!-- 다른 스포츠 페이지 링크 추가 -->
             </ul>
         </nav>
